<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable">

    <Button
        android:id="@+id/btn5"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:text="@string/Themes"
        android:layout_marginVertical="60dp"
        android:onClick="onClick"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_marginVertical="60dp"
        android:text="@string/Profile"
        android:onClick="onClick"
        android:layout_gravity="end" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:text="@string/Registration"
        android:layout_marginVertical="140dp"
        android:onClick="onClick"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_marginVertical="140dp"
        android:text="@string/Login"
        android:onClick="onClick"
        android:layout_gravity="end" />


</FrameLayout>