<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".LogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:text="@string/Login"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input_email2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:autofillHints="Email"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/input_pass2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="260dp"
        android:autofillHints="Password"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/signInBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="350dp"
        android:background="@color/white"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="#757575"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/signUpBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="25dp"
        android:text="@string/Registration"
        android:textColor="#283593"
        android:textSize="18sp"
        android:textStyle="bold" />


</FrameLayout>