<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_drawable"
    tools:context="com.example.kursach.RegisterFragment">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="#E8EAF6"
        android:textSize="15sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="phone"
        android:textColorHint="#E8EAF6"
        android:textSize="15sp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColorHint="#E8EAF6"
        android:textSize="15sp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/RetypePassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColorHint="#E8EAF6"
        android:textSize="15sp"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="200dp"
            android:text="@string/Registration"
            android:textColor="#D1C4E9" />

        <Button
            android:id="@+id/btn_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="145dp"
            android:text="@string/Login"
            android:textColor="#D1C4E9" />

    </RelativeLayout>

</LinearLayout>