<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_drawable"
    tools:context="com.example.kursach.CreateFragment">

    <EditText
        android:id="@+id/NameTechnics"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:autofillHints="name"
        android:hint="@string/NameTechnics"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#BBDEFB"
        android:textColorHint="#E0E0E0" />

    <EditText
        android:id="@+id/NameCompany"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NameCompany"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColor="#BBDEFB"
        android:textColorHint="#E3F2FD" />

    <EditText
        android:id="@+id/DateWarranty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="#F3E5F5"
        android:textColorHint="#F3E5F5"
        tools:hint="@tools:sample/date/ddmmyy"
        android:importantForAutofill="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_cr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/SendToSpisok"
            android:textColor="#E1BEE7" />

    </RelativeLayout>

</LinearLayout>